# mpi-actor-c

./: .gitignore  CMakeLists.txt  Makefile  README.md  actor_definition.concept.c  definition.concept.c  lifetime.concept.c
design/: interfaces.txt  requirements.txt
src/: CMakeLists.txt  Makefile  actor.h  actor_comm_data.c  actor_comm_data.h  actor_create.c  actor_create.h  actor_start.c  actor_start.h  actor_type.c  actor_type_data.c  actor_type_data.h  type_create_actor.c  type_create_actor.h
test/: .gitignore  CMakeLists.txt  Makefile  actor_comm_data.test.c  actor_create.test.c  actor_start.test.c  actor_type.test.c  actor_type_data.test.c  mpitest.c  mpitest.h  test.c  test.h  type_create_actor.test.c
